--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,65 @@
 /* work sans font */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+
+/* shared styles */
 *{
     font-family: 'Work Sans', sans-serif;
-    padding: 0;
-    margin: 0;
 }
 
-li > a{
-   text-decoration: none; 
+.btn-primary{
+    
+}
+
+
+/* header styles */
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+
+/* nav styles */
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-title{
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+nav > ul{
+    display: flex;
+}
+
+nav li{
+    list-style: none;
+    margin-right: 30px;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+nav li a{
+    text-decoration: none;
+    color: #424242;
+}
+
+/* banner styles */
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.banner-title{
+    color: #131313;
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.banner-description{
+    color: #727272;
 }
