--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,55 @@ nav li a{
 }
 
 
+/* main styles */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* feature section styles */
+.features-container{
+    display: flex;
+    align-items: center;
+}
+
+.features-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.features-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.features-title{
+    font-size: 2.8rem; 
+}
+
+.quick-list{
+    color: #727272;
+    font-weight: 500;
+}
+
+.of-our{
+    color: #131313;
+    font-weight: 700;
+}
+
+.features{
+    color: #FF900E;
+    font-weight: 700;
+}
+
+.features-description{
+    color: #727272;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+
 
 /* responsive meida queries */
 
