--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+.text-title{
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
 .text-description-color{
     color: #727272;
 }
@@ -34,12 +40,6 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-title{
-    color: #131313;
-    font-size: 2.8rem;
-    font-weight: 700;
 }
 
 nav > ul{
