--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,34 @@ main{
     font-weight: 700;
 }
 
+/* facts section styles */
+.facts-card{
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+    margin-top: 20px;
+}
+
+.facts-card .card .card-stats{
+    color: #424242;
+    font-size: 2.8rem;
+    font-weight: 600; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.facts-card .card .card-title{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 5px;
+}
+
 
 
 /* responsive meida queries */
